<resources>
    <string name="app_name">Trip Planner</string>
    <string name="main_actionbar_name">My trips</string>
    <string name="main_welcome_traveler">Welcome Traveler!</string>
    <string name="main_huge_text">Start by creating your first trip and \n then plan the activities of your \n travel plan</string>

    <string name="login_required_field">Required Field</string>
    <string name="login_not_valid_email">Invalid email-address</string>
    <string name="login_password_minimum">Password needs at least 6 characters</string>
    <string name="login_password_has_space">Password can not contain a space</string>
    <string name="login_account_created_successfully">Account created successfully</string>
    <string name="login_email_in_use">This email is already registered</string>
    <string name="login_encountered_problem">It seems we\'ve hit a snag</string>
    <string name="login_incorrect_details">Email and/or password incorrect</string>
    <string name="login_signed_in">Logged in successfully</string>
    <string name="login_reset_link_sent">Password reset link sent to your email</string>
    <string name="login_incorrect_email">We don\'t recognise that email</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login_dont_have_an_account">Don\'t have an account?\u0020\u0020</string>
    <string name="login_create_one">Create One</string>
    <string name="login_forgot_password">Forgot my Password</string>
    <string name="login_loading">Loading...</string>
    <string name="login_logout_successful">Signed out successfully</string>

    <string name="ui_email">Email</string>
    <string name="ui_password">Password</string>
    <string name="ui_sign_in">Sign In</string>
    <string name="ui_first_name">First Name</string>
    <string name="ui_destination">Destination</string>
    <string name="ui_origin">Origin</string>
    <string name="ui_comma">,</string>
    <string name="ui_account">Account</string>
    <string name="ui_create_new_trip">Create Trip</string>
    <string name="ui_plan">Itinerary</string>
    <string name="ui_no_internet">No internet connection</string>
    <string name="ui_save">Save</string>
    <string name="ui_sign_out">Sign out</string>
    <string name="ui_dash">\u0020-\u0020</string>
    <string name="ui_cancel">cancel</string>

    <string name="newtrip_actionbar_name">Plan a new Trip</string>
    <string name="newtrip_destination"><b>Where to?</b>\u0020 e.g. Paris, New York, Japan</string>
    <string name="newtrip_lets_plan_your_trip">Let\'s plan your trip!</string>
    <string name="newtrip_hey">Hey\u0020</string>
    <string name="newtrip_hey_traveler">Hey Traveler,</string>
    <string name="newtrip_dates"><b>Dates</b></string>
    <string name="newtrip_origin"><b>Origin</b></string>
    <string name="newtrip_create_new_trip"><b>Start planning</b></string>
    <string name="newtrip_inspiration_text"><b>Need some flight inspiration?</b>\nFill in your city of origin to find a destination that suits you!</string>
    <string name="newtrip_timezone"><b>Timezone</b></string>

    <string name="ui_hotels">Hotels</string>
    <string name="ui_flights">Flights</string>
    <string name="ui_notes">Notes</string>
    <string name="ui_overview">Overview</string>
    <string name="ui_itinerary">Itinerary</string>
    <string name="ui_budget">Budget</string>

    <string name="profile_not_signed_in"><b>It appears you aren\'t signed in</b>\n\nCreate an account or sign in to have your trips sync across all your devices!</string>
    <string name="profile_delete_account">Delete Account</string>
    <string name="profile_account_deleted">Account Deleted Successfully</string>
    <string name="profile_not_signed_in_error">It appears you aren\'t signed in</string>
    <string name="profile_delete_account_dialog_text">Are you absolutely sure you want to delete your account?</string>
    <string name="profile_account_info_text">Change your account details below:</string>
    <string name="profile_sign_in_create_account">Sign In / Create Account</string>
    <string name="ui_live_badge_text"><i><b>NOW TRAVELING</b></i></string>
    <string name="ui_expenses">Expenses</string>
    <string name="edittrip_budget">"Budget: "</string>
    <string name="edittrip_rentals">Rentals</string>
    <string name="past_you_ve_seen">You\'ve Seen</string>
    <string name="ui_currency">Currency</string>
    <string name="edittext_select_item_type">Select Item Type</string>
    <string name="edittext_0_00">0.00</string>
    <string name="edittrip_set_budget">Set Budget</string>
    <string name="ui_description">Description</string>
    <string name="budget_add_budget_text">Don\'t forget to enter a Budget!</string>
    <string name="budget_enter_expenses_details">Don\'t forget to enter a value and select the type of expense!</string>
    <string name="budget_value_negative">Oops, can\'t have a negative number!</string>
    <string name="ui_add_expense">Add Expense</string>
    <string name="ui_edit_expense">Edit Expense</string>
    <string name="ui_delete">Delete</string>
    <string name="currency_select_currency">Select Currency</string>
    <string name="past_trip_frequency">Trip Frequency</string>
    <string name="im_attr_log_in_image">Log in Image</string>
    <string name="ui_delete_trip">Delete Trip</string>
    <string name="ui_change_cover_image">Change cover image</string>
    <string name="edit_trip_map">Map</string>
    <string name="ui_add_a_note">Add a Note</string>
    <string name="ui_add_a_flight">Add a Flight</string>
    <string name="ui_add_a_hotel">Add a Hotel</string>
    <string name="ui_add_a_rental_car">Add a Rental Car</string>
    <string name="ui_add_an_activity">Add an Activity</string>
    <string name="ui_tbd">TBD</string>
    <string name="open_location_settings">Open settings</string>
    <string name="gps_network_not_enabled">Gps network not enabled</string>
    <string name="gps_network_not_enabled_message">In order to find your location your location services have to be enabled</string>
    <string name="edittrip_activities">Activities</string>
    <string name="budget_huge_text">It appears you haven\'t added\nany expenses yet, press the \nbutton below to add \n your first expense!</string>
    <string name="past_huge_text">Plan your trips and have a fun time,\nuntil then i\'ll be waiting patiently.</string>
    <string name="past_no_past_trips">I can\'t find any past trips</string>
    <string name="itinerary_huge_text">Get started by pressing the add button below\nand adding activities and/or hotels\nto your itinerary</string>
    <string name="rental_pick_up">Pick-up</string>
    <string name="ui_address">Address</string>
    <string name="ui_date">Date</string>
    <string name="ui_time">Time</string>
    <string name="rental_drop_off">Drop-off</string>
    <string name="ui_confirmation_number">Confirmation number</string>
    <string name="ui_cost">Cost</string>
    <string name="rental_car_details">Car details</string>
    <string name="hotel_check_in">Check-in</string>
    <string name="hotel_check_out">Check-out</string>
    <string name="timezone_select_timezone">Select Timezone</string>
    <string name="ui_timezone"><b>Timezone</b></string>
    <string name="ui_airport">Airport</string>
    <string name="ui_currency_symbol">$</string>
    <string name="flight_airline">Airline</string>
    <string name="flight_flight_number">Flight number</string>
    <string name="flight_departure">Departure</string>
    <string name="flight_arrival">Arrival</string>
    <string name="ui_start">Start</string>
    <string name="ui_end">End</string>
    <string name="ui_name">Name</string>
    <string name="ui_hotel">Hotel</string>
    <string name="trip_details_tbd">\u0020\u0020TBD\u0020</string>
    <string name="upcoming_search_bar_text">Search your itinerary</string>

</resources>