<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:backgroundTint="@color/barelyGrey"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ItineraryTextBoxes"
            android:hint="@string/flight_airline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/flight_airline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:paddingVertical="6dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ItineraryTextBoxes"
                android:hint="@string/flight_flight_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/flight_flight_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:paddingVertical="6dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ItineraryTextBoxes"
            android:hint="@string/ui_confirmation_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/flight_confirmation_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:paddingVertical="6dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/flight_departure"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/flight_departure_airport_layout"
            style="@style/ItineraryTextBoxes"
            android:hint="@string/ui_airport"
            app:endIconDrawable="@drawable/ic_map"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/flight_departure_airport"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:focusableInTouchMode="false"
                android:inputType="textShortMessage"
                android:paddingVertical="4dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/flight_departure_date_layout"
                style="@style/ItineraryTextBoxes"
                android:layout_width="wrap_content"
                android:layout_marginEnd="15dp"
                android:hint="@string/ui_date"
                android:minWidth="80dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/flight_departure_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:focusableInTouchMode="false"
                    android:imeOptions="actionNext"
                    android:paddingVertical="4dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/flight_departure_time_layout"
                style="@style/ItineraryTextBoxes"
                android:layout_width="wrap_content"
                android:hint="@string/ui_time"
                android:minWidth="80dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/flight_departure_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:focusableInTouchMode="false"
                    android:paddingVertical="4dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/flight_arrival"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/flight_arrival_airport_layout"
            style="@style/ItineraryTextBoxes"
            android:hint="@string/ui_airport"
            app:endIconDrawable="@drawable/ic_map"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/flight_arrival_airport"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:focusableInTouchMode="false"
                android:inputType="textShortMessage"
                android:paddingVertical="4dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/flight_arrival_date_layout"
                style="@style/ItineraryTextBoxes"
                android:layout_width="wrap_content"
                android:layout_marginEnd="15dp"
                android:hint="@string/ui_date"
                android:minWidth="80dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/flight_arrival_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:focusableInTouchMode="false"
                    android:paddingVertical="4dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/flight_arrival_time_layout"
                style="@style/ItineraryTextBoxes"
                android:layout_width="wrap_content"
                android:hint="@string/ui_time"
                android:minWidth="80dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/flight_arrival_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="time"
                    android:paddingVertical="4dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/flight_money_symbol"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/ui_currency_symbol"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ItineraryTextBoxes"
                android:layout_width="wrap_content"
                android:hint="@string/ui_cost"
                android:minWidth="90dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/flight_cost"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:paddingVertical="4dp"
                    app:autoSizeTextType="uniform" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/flight_saved_check"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/flight_save"
                android:src="@drawable/ic_check_mark"
                android:visibility="gone"
                app:tint="@color/green" />

            <Button
                android:id="@+id/flight_save"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/blue"
                android:elevation="0dp"
                android:text="@string/ui_save" />

            <Button
                android:id="@+id/flight_delete"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:backgroundTint="@color/red"
                android:elevation="0dp"
                android:text="@string/ui_delete" />

            <androidx.cardview.widget.CardView
                android:id="@+id/flight_confirm_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/flight_delete"
                android:layout_marginEnd="-5dp"
                android:visibility="gone"
                app:cardCornerRadius="100dp"
                app:cardElevation="10dp">

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:src="@drawable/ic_check_circle"
                    android:visibility="visible"
                    app:tint="@color/green" />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>