<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:backgroundTint="@color/barelyGrey"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ItineraryTextBoxes"
                android:layout_toStartOf="@+id/rental_delete_ic"
                android:hint="@string/rental_pick_up">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rental_pick_up"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="text"
                    android:paddingVertical="6dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/rental_delete_ic"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:padding="5dp"
                android:src="@drawable/ic_trash"
                android:visibility="visible"
                app:tint="@color/kindaDarkGrey" />

            <ImageView
                android:id="@+id/rental_confirm_delete"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="6dp"
                android:alpha="0.8"
                android:src="@drawable/ic_check_circle"
                android:visibility="gone"
                app:tint="@color/green" />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rental_pick_up_address_layout"
            style="@style/ItineraryTextBoxes"
            android:hint="@string/ui_address"
            app:endIconDrawable="@drawable/ic_map"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rental_pick_up_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:focusableInTouchMode="false"
                android:inputType="textShortMessage"
                android:paddingVertical="4dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rental_pick_up_date_layout"
                style="@style/ItineraryTextBoxes"
                android:layout_width="wrap_content"
                android:layout_marginEnd="15dp"
                android:hint="@string/ui_date"
                android:minWidth="80dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rental_pick_up_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:focusableInTouchMode="false"
                    android:imeOptions="actionNext"
                    android:paddingVertical="4dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rental_pick_up_time_layout"
                style="@style/ItineraryTextBoxes"
                android:layout_width="wrap_content"
                android:hint="@string/ui_time"
                android:minWidth="80dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rental_pick_up_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:focusableInTouchMode="false"
                    android:paddingVertical="4dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <!--        <TextView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="5dp"-->
        <!--            android:layout_marginTop="5dp"-->
        <!--            android:text="@string/rental_drop_off"-->
        <!--            android:textColor="@color/black"-->
        <!--            android:textSize="13sp" />-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/ItineraryTextBoxes"
            android:layout_marginTop="15dp"
            android:hint="@string/rental_drop_off">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rental_drop_off"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:focusableInTouchMode="false"
                android:inputType="text"
                android:paddingVertical="6dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rental_drop_off_address_layout"
            style="@style/ItineraryTextBoxes"
            android:hint="@string/ui_address"
            app:endIconDrawable="@drawable/ic_map"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rental_drop_off_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:focusableInTouchMode="false"
                android:inputType="textShortMessage"
                android:paddingVertical="4dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rental_drop_off_date_layout"
                style="@style/ItineraryTextBoxes"
                android:layout_width="wrap_content"
                android:layout_marginEnd="15dp"
                android:hint="@string/ui_date"
                android:minWidth="80dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rental_drop_off_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:focusableInTouchMode="false"
                    android:paddingVertical="4dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rental_drop_off_time_layout"
                style="@style/ItineraryTextBoxes"
                android:layout_width="wrap_content"
                android:hint="@string/ui_time"
                android:minWidth="80dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rental_drop_off_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="time"
                    android:paddingVertical="4dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ItineraryTextBoxes"
            android:hint="@string/rental_car_details">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rental_car_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:paddingVertical="6dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ItineraryTextBoxes"
            android:hint="@string/ui_confirmation_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rental_confirmation_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:paddingVertical="6dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/rental_money_symbol"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/ui_currency_symbol"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ItineraryTextBoxes"
                android:layout_width="wrap_content"
                android:hint="@string/ui_cost"
                android:minWidth="90dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rental_cost"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:paddingVertical="4dp"
                    app:autoSizeTextType="uniform" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>