<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/set_budget_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="100dp">

    <View
        android:layout_width="40dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginVertical="5dp"
        android:background="@drawable/shape_round_square" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="7dp">

        <TextView
            android:id="@+id/set_budget_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/places_cancel"
            android:textColor="@color/grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:text="@string/edittrip_set_budget"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/set_budget_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="?android:attr/selectableItemBackground"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/ui_save"
            android:textColor="@color/orange" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/set_budget_cost_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:paddingVertical="7dp">

        <TextView
            android:id="@+id/budget_money_symbol"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:paddingHorizontal="5dp"
            android:text="$"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/budget_money_symbol_arrow"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="5dp"
            android:padding="5dp"
            android:src="@drawable/ic_arrow_down"
            android:translationX="-5dp"
            app:tint="@color/black" />

        <EditText
            android:id="@+id/set_budget_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/edittext_0_00"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </LinearLayout>
</LinearLayout>